Added account type setting.
Added Account Type column to accounts table.

Added Account Type to infobox.

Added account type field to reports on all accounts level.

Tests added.

Code review fixes.

--- a/server/actionlog/fixtures/test_api.yaml
+++ b/server/actionlog/fixtures/test_api.yaml
@@ -725,6 +725,16 @@
 -   fields:
         created_dt: '2014-06-04T00:00:00'
         created_by: 1
+        archived: False
+        name: 'Test settings 1'
+        account: 1
+        account_type: 5
+    model: dash.accountsettings
+    pk: 1
+
+-   fields:
+        created_dt: '2014-06-04T00:00:00'
+        created_by: 1
         archived: True
         name: 'Test settings 3'
         account: 3
