--- a/server/dash/fixtures/test_account_agency.yaml
+++ b/server/dash/fixtures/test_account_agency.yaml
@@ -198,6 +198,7 @@
         name: AccountSetting for Account 200
         default_account_manager: 1
         default_sales_representative: 2
+        account_type: 1
         created_dt: '2015-09-23T09:57:21'
         created_by: 1
         account: 200
@@ -209,17 +210,19 @@
         name: AccountSetting for Account 200
         default_account_manager: 1
         default_sales_representative: 1
+        account_type: 1
         created_dt: '2015-09-23T09:57:23'
         created_by: 1
         account: 200
     model: dash.accountsettings
     pk: 201
 
-# multiple updates (default_account_manager, default_sales_representative)
+# multiple updates (default_account_manager, default_sales_representative, account_type)
 -   fields:
         name: AccountSetting for Account 200
         default_account_manager: 2
         default_sales_representative: 2
+        account_type: 4
         created_dt: '2015-09-23T09:57:23'
         created_by: 1
         account: 200
@@ -231,6 +234,7 @@
         name: AccountSetting for Account 200
         default_account_manager: 2
         default_sales_representative: 2
+        account_type: 4
         created_dt: '2015-09-23T09:57:24'
         created_by: 1
         account: 200
@@ -242,6 +246,7 @@
         name: AccountSetting for Account 200
         default_account_manager: 2
         default_sales_representative: 2
+        account_type: 4
         created_dt: '2015-09-23T09:57:25'
         created_by: 1
         changes_text: 'some text'
@@ -254,6 +259,7 @@
         name: AccountSetting for Account 200
         default_account_manager: 2
         default_sales_representative: 1
+        account_type: 4
         created_dt: '2015-09-23T09:57:26'
         created_by: 1
         changes_text: 'some text'
@@ -266,6 +272,7 @@
         name: AccountSetting for Account 201
         default_account_manager: 1
         default_sales_representative: 1
+        account_type: 1
         created_dt: '2015-09-23T09:57:22'
         created_by: 1
         account: 201
