--- a/server/dash/fixtures/test_views.yaml
+++ b/server/dash/fixtures/test_views.yaml
@@ -68,6 +68,7 @@
         archived: False
         default_account_manager: 2
         default_sales_representative: 3
+        account_type: 3
     model: dash.accountsettings
     pk: 1
 
