k1 publisher blacklist api

--- a/server/k1api/fixtures/test_k1_api.yaml
+++ b/server/k1api/fixtures/test_k1_api.yaml
@@ -506,3 +506,53 @@
         modified_dt: '2015-02-23T00:00:00'
     model: dash.contentadsource
     pk: 4
+
+# test publisherblacklist
+
+-   fields:
+        name: 'pub1.com'
+        account: 1
+        campaign: 1
+        ad_group: 1
+        source: 1
+        external_id: ''
+        status: 1
+        created_dt: '2015-02-23T00:00:00'
+    model: dash.publisherblacklist
+    pk: 1
+
+-   fields:
+        name: 'pub2.com'
+        account: 1
+        campaign: 1
+        ad_group: 1
+        source: 2
+        external_id: ''
+        status: 2
+        created_dt: '2015-02-23T00:00:00'
+    model: dash.publisherblacklist
+    pk: 2
+
+-   fields:
+        name: 'pub3.com'
+        account: 1
+        campaign: 1
+        ad_group: 2
+        source: 2
+        external_id: ''
+        status: 1
+        created_dt: '2015-02-23T00:00:00'
+    model: dash.publisherblacklist
+    pk: 3
+
+-   fields:
+        name: ''
+        account: 1
+        campaign: 1
+        ad_group: 3
+        source: 2
+        external_id: ''
+        status: 2
+        created_dt: '2015-02-23T00:00:00'
+    model: dash.publisherblacklist
+    pk: 4
