--- a/server/k1api/fixtures/test_k1_api.yaml
+++ b/server/k1api/fixtures/test_k1_api.yaml
@@ -268,6 +268,7 @@
 -   fields:
         ad_group: 1
         created_dt: '2014-06-04T00:00:00'
+        start_date: '2014-06-04'
         enable_ga_tracking: true
         ga_tracking_type: 2
         state: 1
@@ -277,6 +278,7 @@
 -   fields:
         ad_group: 2
         created_dt: '2014-01-02T00:00:00'
+        start_date: '2014-06-04'
         enable_ga_tracking: true
         ga_tracking_type: 2
         state: 1
@@ -286,6 +288,7 @@
 -   fields:
         ad_group: 3
         created_dt: '2014-01-01T00:00:00'
+        start_date: '2014-06-04'
         enable_ga_tracking: true
         ga_tracking_type: 2
         state: 1
@@ -295,6 +298,7 @@
 -   fields:
         ad_group: 3
         created_dt: '2014-01-02T00:00:00'
+        start_date: '2014-06-04'
         enable_ga_tracking: false
         ga_tracking_type: 1
         state: 2
