--- a/server/dash/fixtures/test_agency.yaml
+++ b/server/dash/fixtures/test_agency.yaml
@@ -48,3 +48,20 @@
         name: 'Mobile'
     model: dash.adgroup
     pk: 1000
+
+
+# test creditlineitems
+
+-   fields:
+        created_dt: '2014-06-04T09:58:21'
+        modified_dt: '2014-06-04T09:58:21'
+        created_by: 1
+        agency: 1
+        start_date: '2015-10-01'
+        end_date: '2015-11-30'
+        amount: 100000
+        license_fee: 0.2
+        status: 2
+        comment: 'Test case'
+    model: dash.creditlineitem
+    pk: 1000
