--- a/server/k1api/fixtures/test_k1_api.yaml
+++ b/server/k1api/fixtures/test_k1_api.yaml
@@ -23,6 +23,7 @@
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
         name: 'test account 1'
+        outbrain_marketer_id: 'abcde'
     model: dash.account
     pk: 1
 
@@ -31,6 +32,7 @@
         modified_dt: '2014-06-04T09:58:21'
         modified_by: 1
         name: 'test account 2'
+        outbrain_marketer_id: 'edcba'
     model: dash.account
     pk: 2
 
@@ -750,4 +752,3 @@
         created_dt: '2015-02-23T00:00:00'
     model: dash.publisherblacklist
     pk: 9
-
